--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,7 +7,7 @@
     <title>Hash</title>
   </head>
   <body>
-    <div id="root" class="text-gray-800 grid grid-rows-[auto_1fr] min-h-screen"></div>
+    <div id="root" class="text-gray-800 grid grid-rows-[auto_1fr] min-h-[100svh] font-hashbnb"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
